<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmallTalk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_recalibrate_mic">Recalibrate Microphone</string>
    <string name="title_activity_game_screen">SmallTalk</string>
    <string name="nextQButton">Next</string>
    <string name="question">This is not a question, but it will be.</string>
    <string name="title_activity_setting_screen">Settings</string>
    <string name="addQuestion">+ Add Questions</string>
    <string name="title_activity_question_wframe">QuestionWFrame</string>
    <string name="dialog_noisecap_cancel">Skip this step</string>
    <string name="dialog_capturing_noise">While we capture 5 seconds of ambient noise...</string>
    <string name="pref_timer">Next Question Timer</string>
    <string name="pref_timer_summary">SmallTalk will move on to the next question if it is quiet for %1$d seconds.</string>
    <string name="pref_timer_val_default">5</string>
    <string name="pref_notification_sound">Notification Sound</string>
    <string name="pref_timeout">Inactivity Timer</string>
    <string name="pref_timeout_never_summary">SmallTalk will never prompt to continue due to inactivity.</string>
    <string name="pref_timeout_summary">SmallTalk will prompt to continue if inactive for %1$d minutes.</string>
    <string name="pref_timeout_default">0</string>
    <string name="pref_speech">Text-to-Speech</string>
    <string name="title_activity_main">What do you want to talk about?</string>

</resources>
